-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.0
-
None
-
Maemo 5, possibly other Linux environments as well
Recording with QAudioInput on Maemo5 and possibly other linux platforms (tested on actual Maemo5 device as well as x86 emulator) loses most of the data under certain conditions when using suspend/resume:
- when the QAudioInput is first started, everything is recorded correctly
- after the first calls to suspend/resume, the buffer no longer receives but a fraction of the data, typically ~20%
- further calls to suspend/resume have no effect, data is still lost
Attached is a small program that records about 16000 bytes of data per second, toggling the recording state every 3 seconds and counts what actually reaches the memory buffer. Under Windows, it correctly generates ~48k/period, under Maemo5 tests ~48k on first period and only ~8k after that.