QAudioInput loses data on Maemo5/other linux platforms. The alsa backend was calculating sample timer on resume using buffer_time instead of period_time.

Task-number:QTBUG-7044
Reviewed-by:Justin McPherson