src/multimedia/audio/qaudioinput_alsa_p.cpp
@@ -534,7 +534,7 @@ void QAudioInputPrivate::resume()
         resuming = true;
         deviceState = QAudio::ActiveState;
         int chunks = buffer_size/period_size;
-        timer->start(buffer_time*chunks/2000);
+        timer->start(period_time*chunks/2000);
         emit stateChanged(deviceState);
     }
 }
